2024-12-12T01:53:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12288332688 # 704
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-12
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 3803 8371 / 3808 8376
* notice: next accum: outdated-unq outdated-all / unq all: 3804 8372 / 3808 8376
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-28] / []

2024-12-10T12:49:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12256449406 # 701
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-10
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 3803 8371 / 3807 8375
* notice: next accum: outdated-unq outdated-all / unq all: 3803 8371 / 3808 8376
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-10]

2024-12-07T12:42:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12212961488 # 695
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-07
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 3802 8370 / 3807 8375
* notice: next accum: outdated-unq outdated-all / unq all: 3803 8371 / 3807 8375
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-23] / []

2024-12-06T12:47:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12199058327 # 693