@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-12-12T01:53:16Z",
+  "timestamp" : "2024-12-12T12:48:41Z",
   "count_outdated" : 8372,
   "uniques_outdated" : 3804,
-  "count" : 8376,
-  "uniques" : 3808,
+  "count" : 8377,
+  "uniques" : 3809,
   "clones" : [
     {
       "timestamp": "2024-12-01T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2024-12-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
