@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 2,
+  "count": 5,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2024-12-01T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2024-12-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-12-12T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
