@@ -1,3 +1,12 @@
+2024-12-12T12:48:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12296738717 # 705
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-12
+* notice: last 14d: unq all: 3 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 3804 8372 / 3808 8376
+* notice: next accum: outdated-unq outdated-all / unq all: 3804 8372 / 3809 8377
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-12-12]
+
 2024-12-12T01:53:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12288332688 # 704
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-12
